(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1
;;

let ver =
  try
    match List.assoc "cmi_magic_number" J.ocamlc_config with
    | "Caml1999I023" -> "407_0"
    | _ -> raise Not_found
  with Not_found ->
    match
      Scanf.sscanf J.ocaml_version "%s@.%s@.%d%s" (fun maj min _ var -> maj, min, var)
    with
      | maj, min, "+multicore" -> maj ^ min ^ "+multicore"
      | maj, min, _ -> maj ^ min
;;

Printf.ksprintf J.send {|
(copy_files# %s/*.ml{,i})

(library
  (name merlin_specific)
  (public_name merlin.specific)
  (wrapped false)
  (flags -open Merlin_utils)
  (libraries merlin_utils parsing preprocess typing utils))
|} ver
