(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1
;;

let ver =
  try
    match List.assoc "cmi_magic_number" J.ocamlc_config with
    | "Caml1999I023" -> "407_0"
    | _ -> raise Not_found
  with Not_found ->
    match
      Scanf.sscanf J.ocaml_version "%s@.%s@.%d%s" (fun maj min _ var -> maj, min, var)
    with
      | maj, min, "+multicore" -> maj ^ min ^ "+multicore"
      | maj, min, _ -> maj ^ min
;;

Printf.ksprintf J.send {|
(copy_files# %s/*.ml{,i})

(rule (copy# ../../extend/extend_helper.ml  extend_helper.ml ))
(rule (copy# ../../extend/extend_helper.mli extend_helper.mli))

(library
  (name parsing)
  (wrapped false)
  (flags (:standard -w -9))
  (modules_without_implementation asttypes parsetree)
  (libraries merlin_utils utils))
|} ver
